<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@color/light_white"
    tools:context=".addPlayers">

    <ImageView
        android:layout_width="65dp"
        android:layout_height="65dp"
        android:src="@drawable/icon"
        android:layout_marginBottom="30dp"
        android:adjustViewBounds="true"
        android:contentDescription="@string/noImage"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Enter_player_names"
        android:textAlignment="center"
        android:textSize="25sp"
        android:textStyle="bold"
        android:textColor="@color/black"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="40dp"
        android:orientation="horizontal"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:gravity="center">

        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:src="@drawable/cross"
            android:adjustViewBounds="true"
            android:layout_marginStart="10dp"
            android:contentDescription="@string/noImage" />

        <EditText
            android:id="@+id/playerOneName"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/editTextPlayerOne"
            android:layout_marginStart="20dp"
            android:textColorHint="@color/black"
            android:inputType="textShortMessage"
            android:shadowColor="@color/black"
            android:textColor="@color/black"/>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="30dp"
        android:orientation="horizontal"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:gravity="center">

        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:src="@drawable/circle1"
            android:adjustViewBounds="true"
            android:layout_marginStart="10dp"
            android:contentDescription="@string/noImage"/>

        <EditText
            android:id="@+id/playerTwoName"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/editTextPlayerTwo"
            android:layout_marginStart="20dp"
            android:textColorHint="@color/black"
            android:inputType="textShortMessage"
            android:textColor="@color/black"/>


    </LinearLayout>

    <Button
        android:id="@+id/startGame"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="40dp"
        android:text="@string/start_game"
        android:textSize="20sp"
        android:background="@drawable/button_round"/>


</LinearLayout>